test/error/MethodVirtualPrivate.ci
public class Test
{
	virtual bool Run() //ERROR: Virtual method cannot be private
	{
		return true;
	}
}
